force-app/main/default/objects/AI_Builder_Action__c/AI_Builder_Action__c.object-meta.xml
<CustomObject>
    <description>Logs every external API call and builder action.</description>
    <label>AI Builder Action</label>
    <nameField>
        <displayFormat>ACT-{0000}</displayFormat>
        <label>Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Builder Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>