force-app/main/default/objects/AI_Builder_Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Story</fullName>
            </value>
            <value>
                <fullName>Update Story</fullName>
            </value>
            <value>
                <fullName>Build Code</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Review Code</fullName>
            </value>
            <value>
                <fullName>Create Tests</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>